--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-hi ! im new, here is a Link checker made by me and chatgpt, I created it originally for personal purposes but creating a reddit account gave me the idea to post it if it can help someone, I specify but for it to work correctly you have to open the file "nano check_url.sh" and that in the last line you put the path of the file "urls" and in this txt file you will have to put the links to check, if it say "ok" it mean that the link work and if it dont "ko"
+hi ! im new, here is a Link checker made by me and chatgpt, I created it originally for personal purposes but creating a reddit account gave me the idea to post it if it can help someone, I specify but for it to work correctly you have to open the file "nano check_url.sh" and that in the last line you put the path of the file "urls" and in this txt file you will have to put the links to check, after that you just need to do "./check_url.sh" and if it say "ok" it mean that the link work and if it dont "ko"
